// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Atom|TodoText default 1`] = `
.c0 {
  position: relative;
  margin: 0;
  width: 100%;
  font-size: 24px;
  font-family: inherit;
  font-weight: inherit;
  line-height: 1.4em;
  border: 0;
  color: inherit;
  padding: 6px;
  border: 1px solid #999;
  box-shadow: inset 0 -1px 5px 0 rgba(0,0,0,0.2);
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 16px 16px 16px 60px;
  border: 0;
  background: rgba(0,0,0,0.003);
  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
}

<input
  autoFocus={true}
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder=""
  type="text"
  value=""
/>
`;

exports[`FileProperties Atom|TodoText text 1`] = `
.c0 {
  position: relative;
  margin: 0;
  width: 100%;
  font-size: 24px;
  font-family: inherit;
  font-weight: inherit;
  line-height: 1.4em;
  border: 0;
  color: inherit;
  padding: 6px;
  border: 1px solid #999;
  box-shadow: inset 0 -1px 5px 0 rgba(0,0,0,0.2);
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 16px 16px 16px 60px;
  border: 0;
  background: rgba(0,0,0,0.003);
  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
}

<input
  autoFocus={true}
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder=""
  type="text"
  value="foo"
/>
`;

exports[`FileProperties Atom|TodoText text and save 1`] = `
.c0 {
  position: relative;
  margin: 0;
  width: 100%;
  font-size: 24px;
  font-family: inherit;
  font-weight: inherit;
  line-height: 1.4em;
  border: 0;
  color: inherit;
  padding: 6px;
  border: 1px solid #999;
  box-shadow: inset 0 -1px 5px 0 rgba(0,0,0,0.2);
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  padding: 16px 16px 16px 60px;
  border: 0;
  background: rgba(0,0,0,0.003);
  box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
}

<input
  autoFocus={true}
  className="c0"
  onBlur={[Function]}
  onChange={[Function]}
  onKeyDown={[Function]}
  placeholder=""
  type="text"
  value="foo"
/>
`;
